Add the manual pages

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -808,6 +808,11 @@ grimpack.manual.industry.subsection.ice.page.recipes.title=Recipes
 grimpack.manual.industry.subsection.spikes=Spikes
 grimpack.manual.industry.subsection.spikes.page.recipe=Spikes can be placed on all 6 sides of a block and can be controlled by redstone. When active they deal a large amount of damage and when inactive they shrink into the ground and do no damage.
 grimpack.manual.industry.subsection.spikes.page.recipe.title=Recipe
+grimpack.manual.industry.subsection.extruders=Extruders
+grimpack.manual.industry.subsection.extruders.page.extruder=Extruders once built can be placed in the world. They are used to help mine and build for you. Right click to give them fuel and optionally give them building materials. Give them a punch and they will get to work.
+grimpack.manual.industry.subsection.extruders.page.extruder.title=Recipe
+grimpack.manual.industry.subsection.extruders.page.info=After an extruder is activated it will start travelling forward in whatever direction it was facing. It will try and mine any blocks in front of it and place blocks from the extruder inventory row underneath the fuel slot. <br>For fuel you can use any sticks, coal, redstone, lava buckets, blaze rods, and magma cream. Some of these give speed boosts or slows it down. By default magma cream is the fastest then redstone, while coal and sticks make it go slower and the rest do not change the speed. <br>Each time it mines a block or places a block extra fuel is consumed. When trying to make an extruder build something you can place obsidian to make it reset the current position in the row back to the front. 
+grimpack.manual.industry.subsection.extruders.page.info.title=Info
 grimpack.manual.industry.subsection.sensors=Sensors
 grimpack.manual.industry.subsection.sensors.page.recipes=Their are 4 different sensors added, Wood, Stone, Iron, and Netherrack. The Wood detects all entities, the Stone detects all living entities, the Iron detects only the player, and the Netherrack detects all hostile entities. A red light will appear if an entity is detected and then it will emit a redstone signal. 
 grimpack.manual.industry.subsection.sensors.page.recipes.title=Recipes
