Add in fan manual page

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -851,6 +851,9 @@ grimpack.manual.industry.subsection.ice.page.recipes.title=Recipes
 grimpack.manual.industry.subsection.spikes=Spikes
 grimpack.manual.industry.subsection.spikes.page.recipe=Spikes can be placed on all 6 sides of a block and can be controlled by redstone. When active they deal a large amount of damage and when inactive they shrink into the ground and do no damage.
 grimpack.manual.industry.subsection.spikes.page.recipe.title=Recipe
+grimpack.manual.industry.subsection.fan=Fans
+grimpack.manual.industry.subsection.fan.page.fan=Fans are directional blocks that can either blow (push) or suck (pull) entities. You can right click to open a GUI where they are configurable for range and modes. Also when activated with redstone they turn off.
+grimpack.manual.industry.subsection.fan.page.fan.title=Recipe
 grimpack.manual.industry.subsection.extruders=Extruders
 grimpack.manual.industry.subsection.extruders.page.extruder=Extruders once built can be placed in the world. They are used to help mine and build for you. Right click to give them fuel and optionally give them building materials. Give them a punch and they will get to work.
 grimpack.manual.industry.subsection.extruders.page.extruder.title=Recipe
