--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -363,6 +363,8 @@ item.stone_multi_tool.name=Stone MultiTool
 item.iron_multi_tool.name=Iron MultiTool
 item.golden_multi_tool.name=Gold MultiTool
 item.obsidian_multi_tool.name=Obsidian MultiTool
+item.black_diamond_multi_tool.name=Black Diamond MultiTool
+item.steel_multi_tool.name=Steel MultiTool
 item.pokeball.name=Pokeball
 item.powerstaff_push.name=Power Staff (Push)
 item.powerstaff_pull.name=Power Staff (Pull)
