Change cages to allow rendering a spinning caught mob using pokeballs.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -575,6 +575,7 @@ container.crafting_diamond=Diamond Crafting (4x)
 container.derrick=Oil Derrick
 container.refinery=Refinery
 container.modern_furnace=Modern Furnace
+container.cage=Cage
 container.grill=Grill
 container.grill.tier=Tier
 container.portable_workbench=Portable Workbench
