Specific Sensor part 1... Not much is implement just the skeleton.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -88,6 +88,7 @@ tile.netherrack_sensor.name=Netherrack Sensor
 tile.attractor.name=Attractor
 tile.repulsor.name=Repulsor
 tile.gravitor.name=Gravitor
+tile.specific_sensor.name=Specific Sensor
 tile.direction_attractor.name=Directional Attractor
 tile.direction_repulsor.name=Directional Repulsor
 tile.direction_gravitor.name=Directional Gravitor
@@ -603,6 +604,19 @@ container.extruder.up=Up
 container.extruder.down=Down
 container.portable_iron_workbench=Portable Iron Workbench
 container.portable_diamond_workbench=Portable Diamond Workbench
+container.specific_sensor=Specific Sensor
+grimpack.industry.sensor.PLAYER=Player
+grimpack.industry.sensor.MOB=Mob
+grimpack.industry.sensor.ITEM=Item
+grimpack.industry.sensor.setItem=Set Item
+grimpack.industry.sensor.setEntity=Set Entity
+grimpack.industry.sensor.setPlayer=Set Player
+grimpack.industry.sensor.setPos=Set Position
+grimpack.industry.sensor.entityName=Entity Name:
+grimpack.industry.sensor.playerName=Player Name:
+grimpack.industry.sensor.x=X:
+grimpack.industry.sensor.y=Y:
+grimpack.industry.sensor.z=Z:
 
 entity.IcePixie.name=Ice Pixie
 entity.Treasure.name=Treasure Mob
