Added files for new slingshots and pellets. Iron slingshot and black diamond slingshot working.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -379,7 +379,15 @@ item.advanced_energy_canister.name=Advanced Energy Canister
 item.advanced_ray_gun.name=Advanced Raygun
 item.dark_iron_ingot.name=Dark Iron Ingot
 item.sling_shot.name=Slingshot
+item.iron_sling_shot.name=Iron Slingshot
+item.black_diamond_sling_shot.name=Black Diamond Slingshot
 item.sling_pellet.name=Slingshot Pellet
+item.iron_sling_pellet.name=Iron Slingshot Pellet
+item.netherrack_sling_pellet.name=Netherrack Slingshot Pellet
+item.fire_sling_pellet.name=Fire Slingshot Pellet
+item.explosive_sling_pellet.name=Explosive Slingshot Pellet
+item.light_sling_pellet.name=Light Slingshot Pellet
+item.slime_sling_pellet.name=Slime Slingshot Pellet
 item.spear.name=Throwing Spear
 item.iron_spear.name=Iron Spear
 item.diamond_spear.name=Diamond Spear
@@ -1015,6 +1023,8 @@ grimpack.manual.tools.subsection.spears.page.specials.title=Special Spears
 grimpack.manual.tools.subsection.sling=Slingshot
 grimpack.manual.tools.subsection.sling.page.pellets=The ammo used with the Slingshot are Slingshot Pellets. They are really easy to craft and can be made out of different materials.
 grimpack.manual.tools.subsection.sling.page.pellets.title=Pellets
+grimpack.manual.tools.subsection.spears.page.specialSlingpellets=The 5 types of special slingshot pellets are Explosive, Fire, Slime, Light, and Lightning Spears. The Explosive, Fire, Light, and Lightning Spears cause a special effect where they land. The Explosive causes an explosion, the Fire sets on fire, the Light places a torch, and the Lightning causes a lightning strike. The Slime Spear bounces where it lands.
+grimpack.manual.tools.subsection.spears.page.specialSlingpellets.title=Special Slingshot Pellets
 grimpack.manual.tools.subsection.sling.page.slingshot=The slingshot is an item that you right click to fire pellets with. The slingshot does not do very much damage but it still can hurt.
 grimpack.manual.tools.subsection.sling.page.slingshot.title=Recipe
 grimpack.manual.tools.subsection.staff=Powerstaff
