--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -180,6 +180,7 @@ tile.fungus_killing.15.name=Glass Layer Building Fungus
 
 #================= ITEMS =================#
 item.instruction_manual.name=Instruction Manual
+item.position_finder.name=GPS
 item.portable_diamond_workbench.name=Portable Diamond Workbench
 item.portable_iron_workbench.name=Portable Iron Workbench
 item.boomerang.name=Boomerang
@@ -473,6 +474,7 @@ Magmacream speed modifier.tooltip=How much faster the Extruder will move with ma
 Workbench black or white list.tooltip=These are where you will find either the whitelisted or blacklisted items and blocks that can be crafted and doubled using an iron or diamond workbench. You can specify mod:name (ex: grimpack:black_diamond) or mod:name:meta (ex: minecraft:wool:3).
 Workbench whitelist else blacklist.tooltip=If true then the workbench is in whitelist mode so all items listed are the only ones that can be crafted. But if false then blacklist mode will allow all items and blocks to be crafted except those listed in 'Workbench black or white list' config list.
 Return Default Recipe If Listed.tooltip=If true then if a block or item is either blacklisted or not on a whitelist then it will return the default crafting recipe.
+Damage from Uranium Ore.tooltip=Determines the amount of damage taken from trying to mine Uranium
 
 grimpack.tools.cfg.tooltip=Config options for the tools and weapons part of the Grim Pack
 grimpack.tools.cfg.general=General Options
@@ -612,6 +614,7 @@ grimpack.industry.sensor.setItem=Set Item
 grimpack.industry.sensor.setEntity=Set Entity
 grimpack.industry.sensor.setPlayer=Set Player
 grimpack.industry.sensor.setPos=Set Position
+grimpack.industry.sensor.setSize=Set Size
 grimpack.industry.sensor.entityName=Entity Name:
 grimpack.industry.sensor.playerName=Player Name:
 grimpack.industry.sensor.x=X:
@@ -623,6 +626,18 @@ grimpack.industry.sensor.noitem=No Item:
 grimpack.industry.sensor.mode=Mode:
 grimpack.industry.sensor.goodPos=Good Position
 grimpack.industry.sensor.badPos=Bad Position
+grimpack.industry.sensor.shouldRender=Should the Sensor Box render in world
+grimpack.industry.sensor.moreOptions=More Options
+grimpack.industry.sensor.reset=Reset Size
+grimpack.industry.sensor.radiusAdd1=Radius +1
+grimpack.industry.sensor.radiusSub1=Radius -1
+grimpack.industry.sensor.outOfRange=Out of Range
+grimpack.industry.sensor.min=Minimum
+grimpack.industry.sensor.max=Maximum
+grimpack.industry.sensor.coords=Coords:
+grimpack.industry.sensor.settingPos=Setting Pos
+grimpack.industry.gps.coords=Coordinates:
+grimpack.industry.gps.noCoords= No Coordinates Set
 
 entity.IcePixie.name=Ice Pixie
 entity.Treasure.name=Treasure Mob
