--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -88,6 +88,7 @@ tile.netherrack_sensor.name=Netherrack Sensor
 tile.attractor.name=Attractor
 tile.repulsor.name=Repulsor
 tile.gravitor.name=Gravitor
+tile.upgraded_specific_sensor.name=Upgraded Specific Sensor
 tile.specific_sensor.name=Specific Sensor
 tile.direction_attractor.name=Directional Attractor
 tile.direction_repulsor.name=Directional Repulsor
@@ -626,7 +627,7 @@ grimpack.industry.sensor.noitem=No Item:
 grimpack.industry.sensor.mode=Mode:
 grimpack.industry.sensor.goodPos=Good Position
 grimpack.industry.sensor.badPos=Bad Position
-grimpack.industry.sensor.shouldRender=Should the Sensor Box render in world
+grimpack.industry.sensor.shouldRender=Show Sensor Box in World
 grimpack.industry.sensor.moreOptions=More Options
 grimpack.industry.sensor.reset=Reset Size
 grimpack.industry.sensor.radiusAdd1=Radius +1
@@ -636,6 +637,7 @@ grimpack.industry.sensor.min=Minimum
 grimpack.industry.sensor.max=Maximum
 grimpack.industry.sensor.coords=Coords:
 grimpack.industry.sensor.settingPos=Setting Pos
+grimpack.industry.sensor.upgradeOptions=Upgrade for more options
 grimpack.industry.gps.coords=Coordinates:
 grimpack.industry.gps.noCoords= No Coordinates Set
 
@@ -943,6 +945,16 @@ grimpack.manual.industry.subsection.extruders.page.info.title=Info
 grimpack.manual.industry.subsection.sensors=Sensors
 grimpack.manual.industry.subsection.sensors.page.recipes=Their are 4 different sensors added, Wood, Stone, Iron, and Netherrack. The Wood detects all entities, the Stone detects all living entities, the Iron detects only the player, and the Netherrack detects all hostile entities. A red light will appear if an entity is detected and then it will emit a redstone signal. 
 grimpack.manual.industry.subsection.sensors.page.recipes.title=Recipes
+grimpack.manual.industry.subsection.sensors.page.position_finder=If you need to find the coordinates of a certain point then you can use the GPS. Simply right click on a block and it tells you the coordinates of the point offset by the side of the block you hit. You need a GPS to set the specific sensors.
+grimpack.manual.industry.subsection.sensors.page.position_finder.title=GPS
+grimpack.manual.industry.subsection.sensors.page.specific_sensor_info=Using specific sensors allows you to detect all types of entities. They have 3 different modes Player, Mob, Item. With player it will detect any player entities or you can set a player name for it to detect. <br>With Mob it will detect all living entities or you can specify the mob name (ex. Zombie). If the name is red it doesn't exist. <br>Finally Item mode detects only thrown Items. If you want it to detect only specific items click set item and then click an item in your inventory.
+grimpack.manual.industry.subsection.sensors.page.specific_sensor_info.title=How to Sense
+grimpack.manual.industry.subsection.sensors.page.specific_sensor_info2=There is just a bit more information for Specific Sensors. To set the position of the sensors you can right click with a GPS that has coordinates or click set position and click on a gps in your inventory. The position you choose cannot be covered by a block and a green message will tell you if it is a good position. <br>You can give yourself an indicator of the position you have chosen by clicking in the top right corner Show Sensor Box in World. <br>Finally, for the upgraded specific sensors you can click on more options to change the size of the box. The box has a maximum of 5 and supports fractional values.
+grimpack.manual.industry.subsection.sensors.page.specific_sensor_info2.title=How to Sense Part 2
+grimpack.manual.industry.subsection.sensors.page.specific_sensor=The base specific sensor does not allow for customizing the box it checks for and has a range of 6 blocks away from the sensor.
+grimpack.manual.industry.subsection.sensors.page.specific_sensor.title=Specific Sensor
+grimpack.manual.industry.subsection.sensors.page.upgraded_specific_sensor=The Upgraded Specific Sensor is a more powerful version that has a larger range as well as you can customize the size of the box you are sensing.
+grimpack.manual.industry.subsection.sensors.page.upgraded_specific_sensor.title=Upgraded Specific
 grimpack.manual.industry.subsection.refining=Refining
 grimpack.manual.industry.subsection.refining.page.uranium=Uranium Ore can be found naturally below the surface in small clusters but if you are in old chunks or you just want to craft some their is a recipe. But be careful because it will hurt you when mining it unless you have a radiation suit.
 grimpack.manual.industry.subsection.refining.page.uranium.title=Uranium Ore
